web-infras/parser/tests/fixtures/babel/es2017/async-functions/invalid-escape-async-class-method/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,22)
1|class X { \u0061sync x() { await x } }
 |                    ^
[SyntaxError]: Missing semicolon or line terminator. (1,34)
1|class X { \u0061sync x() { await x } }
 |                                ^
